# prompt-git

./: .gitignore  README.md  blog-post.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_git/: __init__.py  cli.py  diff.py  models.py  store.py
tests/: test_cli.py  test_diff.py  test_store.py
